--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
-            <version>22.0.2</version>
+            <version>25-ea+21</version>
             <type>jar</type>
         </dependency>
     </dependencies>
